[tool.poetry]
name = "zephyrus"
version = "0.0.0"
description = ""
authors = ["Chris Latham <cl@bink.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "settings.py" },
]

[tool.poetry.dependencies]
python = ">=3.8.1"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
werkzeug = "^3.0.1"
mypy = "^1.8.0"
freezegun = "^1.4.0"
black = "^24.2.0"
flake8 = "^7.0.0"
ptpython = "^3.0.26"
xenon = "^0.9.1"
falcon = "^3.1.3"
sentry-sdk = "^1.40.5"
python-jose = "^3.3.0"
arrow = "^1.3.0"
azure-keyvault-secrets = "^4.8.0"
azure-identity = "^1.15.0"
tenacity = "^8.2.3"
kombu = "^5.3.5"
prometheus-client = "^0.20.0"
lxml = "^5.1.0"
requests = "^2.31.0"
signxml = "^3.2.2"
voluptuous = "^0.14.2"
gunicorn = "^21.2.0"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120